# rustpython-on-esp32

./: Cargo.toml  monitor.sh  upload.sh  upload_debug.sh
.cargo/: config.toml
