[package]
edition      = "2024"
name         = "time-waster"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "time-waster"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32s3", "unstable"] }
esp-alloc        = "0.10.0"

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }

#rustpython-vm = { path = "../RustPython/vm/", default-features = false, features = ["compiler"] }
getrandom = { version = "0.3", features = [] }
rustpython-vm = { git = "https://github.com/Masterchef365/RustPython.git", branch = "esp32", default-features = false, features = ["compiler"] }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
volatile = "0.2.6"
esp-println = { version = "0.17.0", features = ["esp32s3"] }
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "println", "panic-handler"] }

# Atomics
portable-atomic = { version = "1.3", features = ["unsafe-assume-single-core"] }
#critical-section = { version = "1.2" }
spin = { version = "0.9.8", features = ["portable-atomic"] }


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = false
#strip = true
#debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 'z'
